--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
         </div>
       </div>
     </main>
-
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Ariori Abdulrafiu</a>
-    </div>
+    </footer>
   </body>
 </html>
